<resources>
    <string name="app_name">Options Menu</string>
    <string name="long_press_me_for_contextual_menu">Long press me for Contextual Menu</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="forward">Forward</string>
    <string name="reply">Reply</string>
    <string name="app_bar_with_options_menu">App Bar with Options Menu</string>
    <string name="contextual_menu">Contextual Menu</string>
    <string name="popup_menu">Popup Menu</string>
    <string name="dialogs">Dialogs</string>
    <string name="pickers_date_and_time">Pickers (Date and Time)</string>
    <string name="app_bar_activity">App Bar Activity</string>
    <string name="context_menu_activity">Context Menu Activity</string>
    <string name="pickers">Pickers</string>
    <string name="long_press_to_show_context_menu">Long press to show Context Menu</string>
    <string name="show_popup_menu">Show Popup Menu</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="show_pickers">Show Pickers</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="selected_time_none">Selected Time: None</string>
    <string name="pick_a_time">Pick a Time</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="this_is_a_sample_text_long_press_to_see_options">This is a sample text. Long press to see options.</string>
    <string name="this_is_a_sample_note_long_press_to_see_options">This is a sample note. Long press to see options.</string>
    <string name="add_note">Add Note</string>
    <string name="action_favorites">Favorites</string>
    <string name="no_note_added_yet">No note added yet</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="selected_date_none">Selected Date: None</string>
    <string name="what_s_your_favorite_color">What\'s your favorite color?</string>
    <string name="what_s_your_dream_destination">What\'s your dream destination?</string>
    <string name="would_you_rather_have_super_strength_or_fly">Would you rather have super strength or fly?</string>
    <string name="ask_me_something">Ask Me Something!</string>
    <string name="selected_date">Selected Date:</string>
    <string name="pick_date">Pick Date</string>
    <string name="selected_time">Selected Time:</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_a_date_and_time">Pick a Date and Time</string>
    <string name="string_selected_time">Selected Time:</string>
    <string name="picktime">Pick Time</string>
    <string name="date_selected">Selected Date: \n</string>
</resources>