<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Hardcoded Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_date_and_time"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <!-- TextView to display selected date -->
    <TextView
        android:id="@+id/tv_selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_selected"
        android:textSize="18sp" />

    <!-- Button to trigger DatePicker -->
    <Button
        android:id="@+id/pickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date" />

    <!-- TextView to display selected time -->
    <TextView
        android:id="@+id/tv_selected_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_selected_time"
        android:textSize="18sp" />

    <!-- Button to trigger TimePicker -->
    <Button
        android:id="@+id/pickTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/picktime" />

</LinearLayout>
